(fix): Payload dark mode

--- a/backend/src/styles/variables.css
+++ b/backend/src/styles/variables.css
@@ -2,6 +2,7 @@
 :root,
 [data-theme='light'],
 [data-theme='dark'] {
+  color-scheme: light dark;
   --theme-success-500: #E60000; /* Shi-Sei Rood */
 }
 
